# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.1022 2009/09/23 10:01:50 ub Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (AGPL). If you
# did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
# --

2.5.0 beta1 (????/??/??)
 - (2009/09/22) Fixed bug#1774 - Updated documentation in AdminQueue.dtl.
 - (2009/09/22) Fixed bug#4100 - ArticleFreeText Default Value not working.
 - (2009/09/22) Fixed bug#1027 - Ticket csv export in customer interface incomplete.
 - (2009/09/21) Fixed bug#4218 - No error message when sending mail through not
    installed sendmail.
 - (2009/09/21) Fixed bug#4312 - MOTD module for Agent Dashboard, thanks to
    Alexander Scholler!
 - (2009/09/21) Fixed bug#3978 - Better description for PGP passphrases.
 - (2009/09/16) Fixed bug#3932 - Translation enhancements for AdminSession.dtl.
 - (2009/09/16) Fixed bug#2786 - Wrong text labels
    AdminSystemAddressForm.dtl.
 - (2009/09/16) Moved to global event handler Kernel/System/EventHander.pm
    for ticket events (config is compatble with old one).
 - (2009/09/15) Improved performance of the PDF backend.

2.4.5 (2009/??/??)
 - (2009/09/23) Fixed bug#4226 - "Previous owner" alway empty when a new owner
    must be defined.
 - (2009/09/23) Fixed bug#4322 - Bulk-Action checkboxes are refilled wrongly by
    Firefox-Autocomplete feature.
 - (2009/09/23) Fixed bug#4320 - Javascript-check on empty body not working
    with RichText-Editor (RTE).
 - (2009/09/23) Fixed bug#2936 - $QData{""} and $Quote{""} crashes if a space
    is set between the arguments.
 - (2009/09/22) Fixed bug# 4262 - Encoding issue with Event-based notifications.
 - (2009/09/22) Fixed bug# 1420 - $Text{"User"} instead of $Text{"Username"} in
    AdminUserForm.dtl
 - (2009/09/22) Ensured that plain article body is used for ArticleViewModules
    in AgentTicketZoom.