@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.1022 2009/09/23 10:01:50 ub Exp $
+# $Id: CHANGES,v 1.1023 2009/09/23 10:53:20 mg Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -26,6 +26,8 @@
  - (2009/09/15) Improved performance of the PDF backend.
 
 2.4.5 (2009/??/??)
+ - (2009/09/23) Fixed bug#3923 - Frontend::Output::FilterText###OutputFilterTextAutoLink
+    does not work.
  - (2009/09/23) Fixed bug#4226 - "Previous owner" alway empty when a new owner
     must be defined.
  - (2009/09/23) Fixed bug#4322 - Bulk-Action checkboxes are refilled wrongly by
